--- a/case.study/daybook/requirements.txt
+++ b/case.study/daybook/requirements.txt
@@ -3,9 +3,9 @@ CouchDB==0.9
 Flask==1.0
 Flask-Babel==0.9
 Flask-Script==0.5.3
-Jinja2==2.7
+Jinja2>2.10.1
 MarkupSafe==0.18
-Werkzeug==0.8.3
+Werkzeug>0.15.3
 itsdangerous==0.22
 py-bcrypt==0.3
 pytz==2013b
